[tool.poetry]
name = "inlinehashes"
version = "0.0.5"
description = "Hash generator for HTML inline styles and scripts"
authors = ["Gonçalo Valério <gon@ovalerio.net>"]
homepage = "https://github.com/dethos/inlinehashes"
repository = "https://github.com/dethos/inlinehashes"
readme = "README.rst"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Text Processing :: Markup :: HTML",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.10.0"
rich = "^13.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
black = "^22.1.0"
mypy = "^0.991"
ruff = "^0.0.229"

[tool.poetry.scripts]
inlinehashes = "inlinehashes.app:run_cli"

[tool.ruff]
select = ["E", "F", "I"]
line-length=88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
